--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@disa/disa-framework",
-  "version": "5.0.3",
+  "version": "5.1.3",
   "private": false,
   "description": "This framework takes care of a DISA application's basic structure.",
   "contributors": [
     {
       "name": "Joerg Jonas Krahn",
       "email": "joerg.jonas.krahn@iav.de"
+    }, {
+      "name": "Daniel Helfenstein",
+      "email": "daniel.helfenstein@iav.de"
     }
   ],
   "scripts": {
