--- a/example/package.json
+++ b/example/package.json
@@ -42,6 +42,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.0",
+    "sass": "^1.60.0",
     "typescript": "^5.0.2",
     "web-vitals": "^3.3.0"
   }
