--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "sass": "1.60.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
