--- a/example/.babelrc
+++ b/example/.babelrc
@@ -9,7 +9,11 @@
             }
         ]
     ],
-    "plugins": [
+    "plugins": [[
+ "@babel/plugin-transform-typescript",{
+ }
+    ],
+       
         "@babel/plugin-proposal-class-properties"
     ],
     "ignore": [
