--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,11 +45,11 @@ validate_typescript:
     NODE_EXTRA_CA_CERTS: ${IAV_CA_BUNDLE}
   script:
     - sh ./scripts/ci_cd/configure_npm.sh
-    - npm install -D
+    - npm ci
     - npx tsc --noEmit --emitDeclarationOnly false
   except:
     - tags
-    
+
 # Builds the framework
 build_package:
   stage: build
