add actual confluence link and add designer

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     {
       "name": "Daniel Helfenstein",
       "email": "daniel.helfenstein@iav.de"
+    },
+    {
+      "name": "Christian Becke",
+      "email": "christian.becke@iav.de"
     }
   ],
   "scripts": {
