--- a/example/.babelrc
+++ b/example/.babelrc
@@ -1,22 +1,18 @@
 {
-    "presets": [
-        "@babel/preset-react",
-        [
-            "@babel/preset-typescript",
-            {
-                "isTSX": true,
-                "allExtensions": true
-            }
-        ]
-    ],
-    "plugins": [[
- "@babel/plugin-transform-typescript",{
- }
-    ],
-       
-        "@babel/plugin-proposal-class-properties"
-    ],
-    "ignore": [
-        "src/**/*.d.ts"
+  "presets": [
+    "@babel/preset-react",
+    [
+      "@babel/preset-typescript",
+      {
+        "isTSX": true,
+        "allExtensions": true
+      }
     ]
+  ],
+  "plugins": [
+    ["@babel/plugin-transform-typescript", {}],
+
+    "@babel/plugin-proposal-class-properties"
+  ],
+  "ignore": ["src/**/*.d.ts"]
 }
