--- a/example/package.json
+++ b/example/package.json
@@ -9,10 +9,10 @@
     }
   ],
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -33,8 +33,7 @@
     ]
   },
   "dependencies": {
-    "disa-framework": "file:../build",
-    "webpack": "^5.76.2"
+    "disa-framework": "file:../build"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
@@ -43,8 +42,19 @@
     "@babel/plugin-transform-typescript": "^7.21.3",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.0",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.44.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.1",
     "sass": "^1.60.0",
     "typescript": "^5.0.2",
-    "web-vitals": "^3.3.0"
+    "vite": "^4.4.4",
+    "vite-plugin-svgr": "^3.2.0",
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
