--- a/package.json
+++ b/package.json
@@ -19,10 +19,7 @@
   ],
   "scripts": {
     "devmode": ".\\scripts\\windows\\devmode_build.bat",
-    "build-linux": "./scripts/ci_cd/build.sh",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint"
+    "build-linux": "./scripts/ci_cd/build.sh"
   },
   "eslintConfig": {
     "extends": [
