--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   ],
   "scripts": {
     "devmode": ".\\scripts\\windows\\devmode_build.bat",
-    "build-linux": "./scripts/ci_cd/build.sh",
-	"run-example": ".\\scripts\\windows\\setup_and_run_example.bat"
+    "build-linux": "./scripts/ci_cd/build.sh"
   },
   "eslintConfig": {
     "extends": [
@@ -48,7 +47,7 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
-    "primereact": "^9.6.0",
+    "primereact": "~9.2.1",
     "react-cookie": "^4.1.1",
     "react-i18next": "^12.2.0",
     "sass": "^1.61.0",
