--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 registry=https://artifactory.iavgroup.local/artifactory/api/npm/npm-remote/
 
-@iav:registry=https://artifactory.iav.com/artifactory/npm-iav
+#@npm-iav:registry=https://artifactory.iav.com/artifactory/npm-iav
