--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 registry=https://artifactory.iavgroup.local/artifactory/api/npm/npm-remote/
 
-@npm-iav-frontend:registry=https://artifactory.iav.com/artifactory/npm-iav
+# The registry for the npm-iav-frontend registry is automatically created by the script (by the call of curl)
