--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,6 +72,7 @@ publish_package:
   script:
     - npm install -D
     - sh ./scripts/ci_cd/configure_npmrc_for_publish.sh
+    - npm publish
   artifacts:
     paths:
       - ./.npmrc
