--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     ]
   },
   "keywords": [
-    "disa-framework"
+    "iav-frontend-framework"
   ],
   "dependencies": {
     "i18next": "^22.4.13",
@@ -72,7 +72,6 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "aws-amplify": "^5.0.22",
-    "react-scripts": "^5.0.1",
     "typescript": "^5.0.2"
   },
   "exports": {
@@ -98,12 +97,12 @@
     "./simpleNavbarTab": "./components/navbar/tabs/simpleNavbarTab.js",
     "./translators": "./components/internationalization/translators.js",
     "./uiLayer": "./components/uiLayer.js",
-    "./disaHeader": "./components/disaHeader.js",
+    "./header": "./components/header.js",
     "./navbar": "./components/navbar/navbar.js",
     "./cookieBanner": "./components/cookie/cookieBanner.js",
     "./constants.css": "./components/css/constants.css",
-    "./disaPage.css": "./components/css/disaPage.css",
-    "./disaFramework.css": "./components/css/disaFramework.css",
+    "./mainPage.css": "./components/css/mainPage.css",
+    "./framework.css": "./components/css/framework.css",
     "./globalColors.css": "./components/css/globalColors.css",
     "./colorSettingsContext": "./contexts/colorsettings.js",
     "./defaultContentSelectionElement": "./components/content/defaultContentSelectionElement.js",
@@ -177,8 +176,8 @@
       "uiLayer": [
         "./components/uiLayer.d.ts"
       ],
-      "disaHeader": [
-        "./components/disaHeader.d.ts"
+      "header": [
+        "./components/header.d.ts"
       ],
       "navbar": [
         "./components/navbar/navbar.d.ts"
@@ -192,11 +191,11 @@
       "constants.css": [
         "./components/css/constants.css"
       ],
-      "disaPage.css": [
-        ".components/css/disaPage.css"
+      "mainPage.css": [
+        ".components/css/mainPage.css"
       ],
-      "disaFramework.css": [
-        "./components/css/disaFramework.css"
+      "framework.css": [
+        "./components/css/framework.css"
       ],
       "globalColors.css": [
         "./components/css/globalColors.css"
