--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "iav-frontend-framework"
   ],
   "dependencies": {
+    "@babel/preset-env": "^7.22.10",
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
     "primeflex": "^3.3.0",
@@ -63,15 +64,17 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.3",
+    "@babel/core": "^7.22.10",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.21.0",
+    "@svgr/babel-plugin-transform-svg-component": "^8.0.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.15.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "aws-amplify": "^5.0.22",
+    "babel-plugin-inline-react-svg": "^2.0.2",
     "typescript": "^5.0.2"
   },
   "exports": {
@@ -81,7 +84,7 @@
     "./basicAuthenticationView": "./components/authentication/default/basicAuthenticationView.js",
     "./basicContentWrapper": "./components/navbar/wrapper/basicContentWrapper.js",
     "./customContentbarWrapper": "./components/content/customContentbarWrapper.js",
-    "./basicContentbarWrapper":"./components/content/basicContentbarWrapper.js",
+    "./basicContentbarWrapper": "./components/content/basicContentbarWrapper.js",
     "./colorProvider": "./providers/colorProvider.js",
     "./constants": "./constants.js",
     "./content": "./components/content/content.js",
@@ -141,8 +144,9 @@
       "contentCell": [
         "./components/content/contentCell.d.ts"
       ],
-      "customContentbarWrapper": 
-      ["./components/content/customContentbarWrapper.d.ts"],
+      "customContentbarWrapper": [
+        "./components/content/customContentbarWrapper.d.ts"
+      ],
       "dummyAuthenticationProvider": [
         "./components/authentication/default/dummyAuthenticationProvider.d.ts"
       ],
@@ -203,10 +207,12 @@
       "colorSettingsContext": [
         "./contexts/colorsettings.d.ts"
       ],
-      "defaultContentSelectionElement":[
+      "defaultContentSelectionElement": [
         "./components/content/defaultContentSelectionElement.d.ts"
       ],
-      "hash":["./utils/hash.d.ts"]
+      "hash": [
+        "./utils/hash.d.ts"
+      ]
     }
   }
 }
