--- a/package.json
+++ b/package.json
@@ -117,7 +117,8 @@
     "./colorSettingsContext": "./build/contexts/colorsettings.js",
     "./defaultContentSelectionElement": "./build/components/content/defaultContentSelectionElement.js",
     "./hash": "./build/utils/hash.js",
-    "./translationFunction": "./build/types/translationFunction.js"
+    "./translationFunction": "./build/types/translationFunction.js",
+    "./navbarSettingsTypes": "./build/types/navbarSettingsTypes.js"
   },
   "typesVersions": {
     "*": {
@@ -219,6 +220,9 @@
       ],
       "hash": [
         "./build/utils/hash.d.ts"
+      ],
+      "navbarSettingsTypes": [
+        "./build/types/navbarSettingsTypes.js"
       ]
     }
   }
