--- a/example/package.json
+++ b/example/package.json
@@ -33,7 +33,7 @@
     ]
   },
   "dependencies": {
-    "iav-frontend-framework": "^8.0.1"
+    "iav-frontend-framework": "file:../build"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
