--- a/package.json
+++ b/package.json
@@ -104,9 +104,11 @@
     "./i18n": "./build/components/internationalization/i18n.js",
     "./imprint": "./build/components/imprint/imprintText.js",
     "./language": "./build/contexts/language.js",
-    "./navbarTab": "./build/components/navbar/navbarTab.js",
+    "./navbarTabTypes": "./build/components/navbar/navbarTabTypes.js",
     "./privilegedNavbarTab": "./build/components/navbar/tabs/privilegedNavbarTab.js",
     "./simpleNavbarTab": "./build/components/navbar/tabs/simpleNavbarTab.js",
+    "./simpleNavbarTabFactory": "./build/components/navbar/factories/simpleNavbarTabFactory.js",
+    "./privilegedNavbarTabFactory": "./build/components/navbar/factories/privilegedNavbarTabFactory.js",
     "./translators": "./build/components/internationalization/translators.js",
     "./uiLayer": "./build/components/uiLayer.js",
     "./header": "./build/components/header/header.js",
