--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,10 @@ default:
   before_script:
     - chmod -R +x ./scripts/ci_cd/
 
-# cache:
-#   key: $CI_COMMIT_REF_SLUG
-#   paths:
-#     - ./node_modules
+cache:
+  key: $CI_COMMIT_REF_SLUG
+  paths:
+    - ./node_modules
 
 stages:
   - prepare
