--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/react-dom": "^18.0.11",
     "aws-amplify": "^6.3.4",
     "babel-plugin-inline-react-svg": "^2.0.2",
+    "prettier": "^3.3.2",
     "typescript": "^5.0.2"
   },
   "files": [
