--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
   ],
   "dependencies": {
     "@babel/preset-env": "^7.22.10",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
     "primeflex": "^3.3.0",
@@ -53,7 +56,8 @@
     "primereact": "^10.3.3",
     "react-cookie": "^4.1.1",
     "react-i18next": "^12.2.0",
-    "simplebar-react": "^3.2.3"
+    "simplebar-react": "^3.2.3",
+    "tss-react": "^4.9.12"
   },
   "peerDependencies": {
     "react": "^18.2.0",
