Fix missing icon in title for feature requests

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,4 +1,4 @@
-name: :rocket: Feature Request
+name: 🚀 Feature Request
 description: Suggest an idea to improve the Frontend Framework.
 title: "[FR]: "
 labels: ["enhancement"]
